<com.example.slidinglayout3d.ThreeDSlidingLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slidingLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="285dip"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:background="#000022"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

     <!--        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Menu"
                android:textColor="#ffffff"
                android:textSize="25sp" /> -->

            <Button
                android:id="@+id/btnLamps"
                style="@style/menuButton"
                android:text="@string/lights" 
                />
            <Button
                android:id="@+id/btnGroups"
               style="@style/menuButton"
                android:text="@string/mygroups" 
                
                />
            <Button
                android:id="@+id/btnScenes"
                 android:text="@string/scenes" 
                 style="@style/menuButton"
                />
            <Button
                android:id="@+id/btnLightControl"
                 android:text="灯光控制" 
                 style="@style/menuButton"
                />
            
            <!-- 
            <Button
                android:id="@+id/btnUpdate"
              style="@style/menuButton"
                android:text="@string/updatesoft" />
            <Button
                android:id="@+id/btnAboutUs"
                style="@style/menuButton"
                android:text="@string/aboutus" />
             -->
            
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="400dip"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:background="#eeeeee"
        android:orientation="vertical"
        android:visibility="visible" >
       <RelativeLayout 
          android:layout_width="match_parent"
          android:layout_height="45dp">
            
	         <Button
	            android:id="@+id/menuButton"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:text="Menu" 
	            android:textColor="#ffffff"
	            android:background="@drawable/menu_button_style"/>
         
             <Button
	            android:id="@+id/menuButtonRight"
	            android:layout_width="45dp"
	            android:layout_height="45dp"
	            android:textColor="#ffffff"
	            android:layout_alignParentRight="true"
	        	android:layout_centerVertical="true"
	        	android:background="@drawable/settings_blue"
	        	android:padding="3dp"
	            /> 
	         
	         
	    </RelativeLayout>
         
         
          <LinearLayout
		        android:id="@+id/content1"
		        android:layout_width="match_parent"
		        android:layout_height="fill_parent"
		        android:layout_alignParentRight="true"
		        android:background="#e9e9e9"
		        android:orientation="vertical"
		        android:visibility="visible" >
            
          </LinearLayout>

<!--         <ListView
            android:id="@+id/contentList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000" >
        </ListView>  -->
    </LinearLayout>

    <com.example.slidinglayout3d.Image3dView
        android:id="@+id/image_3d_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:visibility="invisible" />

</com.example.slidinglayout3d.ThreeDSlidingLayout>