<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical" 
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#111111" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="#111111"
            android:orientation="vertical" >
            
            <TextView 
                 android:id="@+id/lampName"
                 android:layout_width="match_parent"
	             android:layout_height="match_parent"
	             android:gravity="center"
	             android:textColor="#ffffff"
                 android:textSize="26sp">
                
                
            </TextView>
            
            <TextView 
                 android:id="@+id/lampName"
                 android:layout_width="match_parent"
	             android:layout_height="match_parent"
	             android:gravity="left"
	             android:textColor="#ffffff"
	             android:text="颜色选取"
                 android:textSize="20sp">
                
                
            </TextView>
            <com.larswerkman.colorpicker.ColorPicker
                android:id="@+id/colorPicker"
                android:layout_width="match_parent"
        		android:layout_height="match_parent" >
                
                
            </com.larswerkman.colorpicker.ColorPicker>
            <TextView 
                 android:id="@+id/lampName"
                 android:layout_width="match_parent"
	             android:layout_height="match_parent"
	             android:gravity="left"
	             android:textColor="#ffffff"
	             android:text="亮度"
                 android:textSize="20sp">
                
                
            </TextView>
           <com.larswerkman.colorpicker.OpacityBar
                android:id="@+id/opacityBar"
                android:layout_width="match_parent"
        		android:layout_height="match_parent" >
                
                
            </com.larswerkman.colorpicker.OpacityBar>
            
             
            <TextView 
                 android:id="@+id/lampName"
                 android:layout_width="match_parent"
	             android:layout_height="match_parent"
	             android:gravity="left"
	             android:textColor="#ffffff"
	             android:text="饱和度"
                 android:textSize="20sp">
                
                
            </TextView>
             <com.larswerkman.colorpicker.SaturationBar
                 android:id="@+id/saturationBar"
                android:layout_width="match_parent"
        		android:layout_height="match_parent" >
                
                
            </com.larswerkman.colorpicker.SaturationBar>
             
          <!--     <com.larswerkman.colorpicker.SVBar
                  android:id="@+id/SVBar"
                android:layout_width="match_parent"
        		android:layout_height="match_parent" >
                
                
            </com.larswerkman.colorpicker.SVBar> 
            
              <com.larswerkman.colorpicker.ValueBar
                  android:id="@+id/ValueBar"
                android:layout_width="match_parent"
        		android:layout_height="match_parent" >
                
                
            </com.larswerkman.colorpicker.ValueBar> -->
            
            <com.larswerkman.colorpicker.ColorPickerView
                android:layout_width="match_parent"
        		android:layout_height="match_parent" 
        		android:visibility="gone">
                
                
            </com.larswerkman.colorpicker.ColorPickerView>  

           <Button
               android:id="@+id/btnSetScene"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/setScene" 
               style="@style/menuButton"/>
           
           
           <LinearLayout
               android:id="@+id/llSetScene"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical" 
            android:background="#eedd22"
            android:visibility="gone">
            
           </LinearLayout>
               
           <RelativeLayout
               android:id="@+id/rlbtn"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical" >
            
            <Button android:id="@+id/okSence"
                 style="@style/menuButton"
                 android:layout_width="100dp"
                android:text="@string/yes" >
                
            </Button>
            
             <Button android:id="@+id/cancelScence"
                  android:layout_width="100dp"
                  style="@style/menuButton"
                  android:layout_toRightOf="@id/okSence"
                  android:layout_marginLeft="50dp"
                android:text="@string/no" >
                
            </Button>
            
               </RelativeLayout>
           
            
        </LinearLayout>
    </ScrollView>
    
</FrameLayout>
